--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "insectDisease"]
+	path = insectDisease
+	url = https://github.com/viralemergence/insectdisease
+	shallow = true
+	registered = true
